# 3D-Model-Rendering

./: .clang-format  CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  PostBuildCommand.cmake
resources/model/: file source.txt
resources/texture/: file source.txt
src/: CMakeLists.txt  Main.cpp  OpenGLWindow.cpp  OpenGLWindow.hpp
src/Model/: Mesh.cpp  Mesh.hpp  TextureFactory.cpp  TextureFactory.hpp  Vertex.hpp
src/OpenGL/: OpenGL.hpp  OpenGLBufferObject.cpp  OpenGLBufferObject.hpp  OpenGLException.cpp  OpenGLException.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderProgram-inl.hpp  OpenGLShaderProgram.cpp  OpenGLShaderProgram.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArrayObject.cpp  OpenGLVertexArrayObject.hpp
src/OpenGL/Detail/: Set-inl.hpp  Set.hpp
src/Shader/: BasicFragmentShader.fs.glsl  BasicVertexShader.vs.glsl
src/Utils/: Compilers.hpp  Global.hpp
src/Utils/FileIO/: FileIn.cpp  FileIn.hpp
src/Utils/FileIO/Detail/: Generals.cpp  Generals.hpp
src/Utils/StringFormat/: StringFormat-inl.hpp  StringFormat.hpp
